--- a/part-b/package.json
+++ b/part-b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.4.3",
+    "@apollo/react-hooks": "^3.0.1",
+    "apollo-boost": "^0.4.4",
     "graphql": "^14.3.1",
-    "react": "^16.8.6",
-    "react-apollo": "^3.0.0-beta.2",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-apollo": "^3.0.1",
+    "react-dom": "^16.9.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
