--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.9.2",
+    "dotenv": "^8.1.0",
+    "mongoose": "^5.6.13",
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^1.19.1"
   }
 }
