--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server": "^2.9.2",
     "dotenv": "^8.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
     "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^1.19.1"
