--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.0.1",
     "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-http": "^1.5.16",
     "graphql": "^14.3.1",
     "react": "^16.9.0",
     "react-apollo": "^3.0.1",
